# fix-to-elim

./: .gitignore  README.md
plugin/: _CoqProject  build.sh  dune-project  fix-to-elim.opam  test.sh
plugin/coq/: Alias.v  Axiom.v  BinInt.v  DefaultOpaque.v  Preprocess.v  PreprocessModule.v  Record.v  Type.v  customfst.v
plugin/src/: dune  fixtoelim.mlpack  fixtranslation.ml4  fixtranslation.mlg
plugin/src/automation/: desugar.ml  desugar.mli  dune
plugin/src/components/abstraction/: abstraction.ml  abstraction.mli  dune
plugin/src/options/: dune  options.ml  options.mli
plugin/src/usability/: dune  preprocess_errors.ml  preprocess_errors.mli
plugin/theories/: Fixtoelim.v  dune
