synopsis:     "Fixpoint to Eliminator Translation"
description:  "Fixpoint to Eliminator Translation"
name:         "fix-to-elim"
opam-version: "2.0"
maintainer:   "talia@dependenttyp.es"
authors:      "PUMPKIN PATCH team"
homepage:     "https://github.com/uwplse/fix-to-elim"
bug-reports:  "https://github.com/uwplse/fix-to-elim"
dev-repo:     "git+https://github.com/uwplse/fix-to-elim"
license:      "MIT"
doc:          "https://github.com/uwplse/fix-to-elim"

depends: [
  "ocaml"         { = "4.07.1+flambda"           }
  "coq"           { = "8.9.1" }
  "dune"          { build & >= "1.9.0" & <= "2.7.1"    }
]

build: [ "dune" "build" "-p" name "-j" jobs ]
